# RavensNestVTT

./: CMakeLists.txt  README.md
config/: client.config.json  server.net.config.json
src/Entrypoints/: ServerMain.cpp  main.cpp  main.h
src/Implementations/: ClientApp.cpp  ClientApp.h  ServerApp.cpp  ServerApp.h
src/VTTLib/: IVTTApp.h  NestTableTop.cpp  NestTableTop.h
src/VTTLib/Clock/: AppClock.cpp  AppClock.h
src/VTTLib/Config/: ConfigParser.h
src/VTTLib/Data/: Serializable.h
src/VTTLib/Helpers/: HelperMacros.h  SDLErrors.h
src/VTTLib/Logging/: Logger.cpp  Logger.h
src/VTTLib/Net/: Packet.h  Socket.cpp  Socket.h
utilities/linux/: copy_config_files.sh  rm_config_files.sh
